# Anti-fundraising

./: .gitignore  README.md
SC/: .gitignore  README.md
SC/contract/: Cargo.toml  build_docker.sh  create_blank.sh
SC/contract/res/: antif_release.wasm
SC/contract/src/: address.rs  case.rs  getters.rs  lib.rs  owner.rs
frontend/: README.md  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: index.css  index.tsx
frontend/src/assets/locales/: en.json
frontend/src/pages/case-page/: index.tsx
frontend/src/pages/header/: index.tsx
frontend/src/pages/home-page/: index.tsx  styles.ts
frontend/src/providers/: CaseContractServiceProvider.tsx  DataProvider.tsx  NearWalletProvider.tsx
frontend/src/providers/helpers/: index.ts
frontend/src/providers/interfaces/: index.ts
frontend/src/routes/: constant.ts  index.tsx
frontend/src/services/config/: index.ts
frontend/src/services/contracts/: AuctionContract.ts  CaseContract.ts  FungibleToken.ts  contractMethods.ts  index.ts
frontend/src/services/helpers/: apiService.ts
frontend/src/services/interfaces/: index.ts
frontend/src/shared/calculation/: index.ts
frontend/src/shared/components/Address/: index.tsx
frontend/src/shared/components/List/: index.tsx
frontend/src/shared/components/Pagination/: index.tsx  interface.ts  styles.ts
frontend/src/shared/components/Status/: index.tsx
frontend/src/shared/constant/: index.ts
frontend/src/shared/interfaces/: index.ts
frontend/src/shared/providers/interfaces/: index.ts
frontend/src/shared/utils/: caseLocales.ts  index.ts
(+10 files in other folders)
