[package]
name = "antif"
version = "1.0.0"
authors = ["HAPI"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "4.0.0" }
near-contract-standards = "4.0.0"

[dev-dependencies]
near-sdk-sim = "3.2.0"
env_logger = { version = "0.9.0", default-features = false }
